--- a/README.textile
+++ b/README.textile
@@ -1,27 +1,16 @@
-Para cargar la base de datos "employees" en MongoDB habra que ejecutar los siguientes comandos:
+En este repositorio están los scripts de migración y el resultado de migrar las siguientes bases de datos de ejemplo de MysQL a MongoDB:
+* employees
+* world
+
+Para cargar las bases de datos en MongoDB usamos el comando *mongoresstore. Por ejemplo, para cargar la base de datos "employees" en MongoDB habra que ejecutar los siguientes comandos:
 
 <pre><code>$ git clone git@github.com:Ciges/MongoDB_Sample_Databases
 $ cd MongoDB_Sample_Databases/mongodb
-$ cd dump
 $ tar -xjvf employees.tar.bz2
 $ mongorestore employees
 </code></pre>
 
-Una vez hecho esto deberiamos tener una base de datos *"employees"* con dos colecciones *"departments"* y *"employees"* de 9 y 300.024 elementos respectivamente
+Una descripción de cada base de datos (tablas y campos) y de los criterios seguidos para migrarlas se pueden encontrar en las siguientes notas compartidas:
+* "Descripción de *employees*":https://www.evernote.com/shard/s19/sh/b9315e6e-993d-4d16-8c75-a4ff804b2d1f/a87446cea9f973a458f318fc04791076
+* "Descripción de *world*":https://www.evernote.com/shard/s19/sh/545c4488-fbaf-4f8b-a8ad-fe51732a442d/ea356f26fc7436af565cc6c73fa442b1
 
-<pre><code>$ mongo
-MongoDB shell version: 2.4.8
-connecting to: test
-> use employees
-switched to db employees
-> show collections
-departments
-employees
-system.indexes
-> db.employees.count()
-300024
-> db.departments.count()
-9
-</code></pre>
-
-Una descripción de la base de datos "employees" (tablas y campos) y de los criterios seguidos para migrarla a MongoDB desde MySQL se puede encontrar en "esta nota de Evernote":https://www.evernote.com/shard/s19/sh/b9315e6e-993d-4d16-8c75-a4ff804b2d1f/a87446cea9f973a458f318fc04791076
